[tool.poetry]
name = "torti"
version = "0.1.0"
description = ""
authors = ["Thomas Schmitt <t.e.schmitt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
arcade = "^2.5.5"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
